fixing font size and decreasing width. wrapping button in a div block

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,10 +1,11 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  font-size: 16px;
 }
 
 .card {
-  width: 1000px;
+  width: 800px;
   background: #fff;
   margin: 16px auto;
 }
@@ -28,7 +29,7 @@ body {
   padding: 12px;
 }
 
-button {
+.button {
   background: white;
   border: 1px solid #eee;
 }
